--- a/web/test/jstests/test_ajax.html
+++ b/web/test/jstests/test_ajax.html
@@ -9,9 +9,10 @@
     <script src="../../data/cubicweb.htmlhelpers.js" type="text/javascript"></script>
     <script src="../../data/cubicweb.ajax.js" type="text/javascript"></script>
     <!-- qunit files -->
-    <script type="text/javascript" src="qunit.js"></script>
-    <link rel="stylesheet" type="text/css" media="all" href="qunit.css" />
+    <script type="text/javascript" src="../../../devtools/data/qunit.js"></script>
+    <link rel="stylesheet" type="text/css" media="all" href="../../../devtools/data/qunit.css" />
     <!-- test suite -->
+    <script src="cwmock.js" type="text/javascript"></script>
     <script src="test_ajax.js" type="text/javascript"></script>
   </head>
   <body>
