--- a/web/test/jstests/test_htmlhelpers.html
+++ b/web/test/jstests/test_htmlhelpers.html
@@ -7,6 +7,7 @@
     <script src="../../data/cubicweb.htmlhelpers.js" type="text/javascript"></script>
     <script type="text/javascript" src="qunit.js"></script>
     <link rel="stylesheet" type="text/css" media="all" href="qunit.css" />
+    <script src="cwmock.js" type="text/javascript"></script>
     <script src="test_htmlhelpers.js" type="text/javascript"></script>
   </head>
   <body>
