--- a/web/test/jstests/test_utils.html
+++ b/web/test/jstests/test_utils.html
@@ -8,6 +8,7 @@
     <script src="utils.js" type="text/javascript"></script>
     <script type="text/javascript" src="qunit.js"></script>
     <link rel="stylesheet" type="text/css" media="all" href="qunit.css" />
+    <script src="cwmock.js" type="text/javascript"></script>
     <script src="test_utils.js" type="text/javascript"></script>
   </head>
   <body>
